2008-08-22: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix equery belongs to strip multiple slashes from path
	names. (Bug #234584)

2008-07-24: Paul Varner <fuzzyray@gentoo.org>
	* equery: Fix equery check to convert mtime to an integer so that
	comparisions always work. Thanks to Alexey Parshin for discovering the
	problem and providing a patch. (Bug 232803)

2008-07-22: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix gentoolkit.split_package_name to work with
	newer portage.catpkgsplit that now returns a tuple instead of a
	list. (Bug 232599)

2008-07-21: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix filtering of masked paths from SEARCH_DIRS
	variable. (Bug 232270)

2008-07-18: Paul Varner <fuzzyray@gentoo.org>
	* equery: Remove prefixed '+/-' signs from IUSE for equery uses
	command. (Bug 232019)

2008-07-09: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix revdep-rebuild to use TMPDIR instead of HOME for
	temporary files. (Bug 203414)
	* revdep-rebuild: Fix revdep-rebuild to not evaluate broken objects
	multiple times. (Bug 220761)

2008-07-09: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix gentoolkit to work without thread support in 
	python. (Bug 223255)

2008-06-16: Marius Mauch <genone@gentoo.org>
	* euse: Add support for multi-parent profiles, account for missing 
	final newline in make.conf

2008-03-19: Paul Varner <fuzzyray@gentoo.org>
	* glsa-check: Fix imports so mail functionality in glsa-check works
	with python versions less than 2.5 (Bug 211706)

2008-03-13: Paul Varner <fuzzyray@gentoo.org>
	* euse: Add --info-installed option from patch provided by Andreas
	Waidler. (Bug 212573)

2008-03-13: Paul Varner <fuzzyray@gentoo.org>
	* revdep-rebuild: Fix trying to emerge an empty list of packages. (Bug
	213294)

2008-02-28: Paul Varner <fuzzyray@gentoo.org>
	* gentoolkit: Fix traceback when accessing the portage
	db. (Bug #211716)

2008-02-21: Paul Varner <fuzzyray@gentoo.org>