@@ -1,4 +1,9 @@
 2008-08-22: Paul Varner <fuzzyray@gentoo.org>
+	* gentoolkit: Fix find_packages and find_installed_packages to print
+	a warning instead of a traceback when an InvalidAtom exception occurs.
+	(Bug #234358)
+
+2008-08-22: Paul Varner <fuzzyray@gentoo.org>
 	* equery: Fix equery belongs to strip multiple slashes from path
 	names. (Bug #234584)
 
